--- a/package.json
+++ b/package.json
@@ -1,26 +1,17 @@
 {
-  "name": "threejs-example",
+  "name": "threejs-character-controls-example",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && npm run serve",
-    "build": "webpack",
-    "serve": "webpack serve"
+    "start": "vite",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "ts-loader": "^8.1.0",
-    "typescript": "^4.2.3",
-    "webpack": "^5.30.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
-  },
+  "devDependencies": {},
   "dependencies": {
-    "@types/three": "^0.131.1",
     "three": "^0.132.2"
   }
 }
